feat(ci): adding HTML report
Signed-off-by: Raphael Defosseux <raphael.defosseux@eurecom.fr>

--- a/ci-scripts/html-templates/file-header.htm
+++ b/ci-scripts/html-templates/file-header.htm
@@ -6,6 +6,16 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <title>OAI Core Network Test Results for JOB_NAME job build #BUILD_ID</title>
+  <style>
+    .badge-primary {
+   color: #ebeef0;
+   background-color: #000080;
+}
+    .badge-danger {
+   color: #ebeef0;
+   background-color: #FF0000;
+}
+  </style>
 </head>
 <body>
   <div class="container-fluid" style="margin-left:1em; margin-right:1em">
